# home-disconnect

./: README.md  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  test.yml
src/home_disconnect/: __init__.py  appliance.py  callback_manager.py  const.py  description_parser.py  description_serializer.py  entities.py  errors.py  hc_socket.py  helpers.py  message.py  session.py  task_manager.py  testutils.py
src/homeconnect_websocket/: entities.py
tests/: conftest.py  const.py  test_base_entity.py  test_callback.py  test_command_entity.py  test_description_parser.py  test_description_serializer.py  test_event_entity.py  test_message.py  test_programm_entity.py  test_session.py  test_socket.py  utils.py
