[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "home-disconnect"
authors = [{ name = "chris-mc1" }, { name = "vemboy200" }]
dependencies = [
 "aiohttp>=3.10",
 "xmltodict>=0.13.0",
 "pycryptodome>=3.21.0",
]
description = "Home Connect Websocket API"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vemboy200/home-disconnect"
Issues = "https://github.com/vemboy200/home-disconnect/issues"

[project.scripts]
hc-parser = "home_disconnect:description_parser.main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "coverage>=7.6.0",
  "pytest-cov>=5.0.0",
  "ruff==0.16.0",
  "pre-commit>=4.2.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
home_disconnect = ["py.typed"]

[tool.versioningit.vcs]
default-tag = "0.0.0"

[tool.versioningit.format]
distance = "{base_version}.dev{distance}"
dirty = "{base_version}+{rev}"
distance-dirty = "{base_version}.dev{distance}+{rev}"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]
